==> mzakharo/micropython/ports/tkm32/uart.c <==
#include <stdio.h>
#include <string.h>
#include <stdarg.h>
#include "py/runtime.h"
#include "py/stream.h"
#include "py/mperrno.h"
#include "py/mphal.h"
#include "shared/runtime/interrupt_char.h"
#include "shared/runtime/mpirq.h"
#include "uart.h"
#include "irq.h"
#include "pendsv.h"
#include "systick.h"
#define UART_RXNE_IS_SET(uart) ((uart)->CSR & UART_FLAG_RXAVL) //接受数据不为空
#define UART_RXNE_IT_EN(uart) do { (uart)->IER |= UART_IT_RXIEN; } while (0)  //接收中断使能
#define UART_RXNE_IT_DIS(uart) do { (uart)->IER &= ~UART_IT_RXIEN; } while (0)
#define USART_IE_ALL (UART_IT_RXBRKEN | UART_IT_ERR | UART_IT_PE | UART_OVER_ERR | UART_TIMEOUT_ERR | UART_IT_RXIEN | UART_IT_TXIEN)
#define GCR_UE_BIT                ((uint16_t)0x0001)  /* UART Enable Mask */

void uart_deinit_all(void) {
    for (int i = 0; i < MP_ARRAY_SIZE(MP_STATE_PORT(pyb_uart_obj_all)); i++) {
        pyb_uart_obj_t *uart_obj = MP_STATE_PORT(pyb_uart_obj_all)[i];
        if (uart_obj != NULL && !uart_obj->is_static) {
            uart_deinit(uart_obj);
            MP_STATE_PORT(pyb_uart_obj_all)[i] = NULL;
        }
    }
}

bool uart_exists(int uart_id) {
    if (uart_id > MP_ARRAY_SIZE(MP_STATE_PORT(pyb_uart_obj_all))) {
        // safeguard against pyb_uart_obj_all array being configured too small
        return false;
    }
    switch (uart_id) {
        #if defined(MICROPY_HW_UART1_TX) && defined(MICROPY_HW_UART1_RX)
        case PYB_UART_1:
            return true;
        #endif

        #if defined(MICROPY_HW_UART2_TX) && defined(MICROPY_HW_UART2_RX)
        case PYB_UART_2:
            return true;
        #endif

        #if defined(MICROPY_HW_UART3_TX) && defined(MICROPY_HW_UART3_RX)
        case PYB_UART_3:
            return true;
        #endif

        #if defined(MICROPY_HW_UART4_TX) && defined(MICROPY_HW_UART4_RX)
        case PYB_UART_4:
            return true;
        #endif

        #if defined(MICROPY_HW_UART5_TX) && defined(MICROPY_HW_UART5_RX)
        case PYB_UART_5:
            return true;
        #endif
        default:
            return false;
    }
}

bool uart_init(pyb_uart_obj_t *uart_obj,
    uint32_t baudrate, uint32_t bits, uint32_t parity, uint32_t stop, uint32_t flow) {
    UART_TypeDef *UARTx;
    IRQn_Type irqn;
    int uart_unit;

    const pin_obj_t *pins[4] = {0};

    switch (uart_obj->uart_id) {
        #if defined(MICROPY_HW_UART1_TX) && defined(MICROPY_HW_UART1_RX)
        case PYB_UART_1:
            uart_unit = 8;
            UARTx = UART1;
            irqn = UART1_IRQn;
            pins[0] = MICROPY_HW_UART1_TX;
            pins[1] = MICROPY_HW_UART1_RX;
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_UART1, ENABLE);
            break;
        #endif

        #if defined(MICROPY_HW_UART2_TX) && defined(MICROPY_HW_UART2_RX)
        case PYB_UART_2:
            uart_unit = 7;
            UARTx = UART2;
            irqn = UART2_IRQn;
            pins[0] = MICROPY_HW_UART2_TX;
            pins[1] = MICROPY_HW_UART2_RX;
            #if defined(MICROPY_HW_UART2_RTS)
            if (flow & UART_HWCONTROL_RTS) {
                pins[2] = MICROPY_HW_UART2_RTS;
            }
            #endif
            #if defined(MICROPY_HW_UART2_CTS)
            if (flow & UART_HWCONTROL_CTS) {
                pins[3] = MICROPY_HW_UART2_CTS;
            }
            #endif
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_UART2, ENABLE);
            break;
        #endif

        #if defined(MICROPY_HW_UART3_TX) && defined(MICROPY_HW_UART3_RX)
        case PYB_UART_3:
            uart_unit = 7;
            UARTx = UART3;
            irqn = UART3_IRQn;
            pins[0] = MICROPY_HW_UART3_TX;
            pins[1] = MICROPY_HW_UART3_RX;
            #if defined(MICROPY_HW_UART3_RTS)
            if (flow & UART_HWCONTROL_RTS) {
                pins[2] = MICROPY_HW_UART3_RTS;
            }
            #endif
            #if defined(MICROPY_HW_UART3_CTS)
            if (flow & UART_HWCONTROL_CTS) {
                pins[3] = MICROPY_HW_UART3_CTS;
            }
            #endif
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_UART3, ENABLE);
            break;
        #endif

        #if defined(MICROPY_HW_UART4_TX) && defined(MICROPY_HW_UART4_RX)
        case PYB_UART_4:
            uart_unit = 7;
            UARTx = UART4;
            irqn = UART4_IRQn;
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_UART4, ENABLE);
            pins[0] = MICROPY_HW_UART4_TX;
            pins[1] = MICROPY_HW_UART4_RX;
            #if defined(MICROPY_HW_UART4_RTS)
            if (flow & UART_HWCONTROL_RTS) {
                pins[2] = MICROPY_HW_UART4_RTS;
            }
            #endif
            #if defined(MICROPY_HW_UART4_CTS)
            if (flow & UART_HWCONTROL_CTS) {
                pins[3] = MICROPY_HW_UART4_CTS;
            }
            #endif
            break;
        #endif

        #if defined(MICROPY_HW_UART5_TX) && defined(MICROPY_HW_UART5_RX)
        case PYB_UART_5:
            uart_unit = 7;
            UARTx = UART5;
            irqn = UART5_IRQn;
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_UART5, ENABLE);
            pins[0] = MICROPY_HW_UART5_TX;
            pins[1] = MICROPY_HW_UART5_RX;
            break;
        #endif

        default:
            // UART does not exist or is not configured for this board
            return false;
    }

	uart_obj->uartx = UARTx;

	mp_hal_pin_config(pins[0], MP_HAL_PIN_MODE_ALT_OUTPUT, MP_HAL_PIN_PULL_UP, uart_unit);
	mp_hal_pin_config(pins[1], MP_HAL_PIN_MODE_IPD_UP,MP_HAL_PIN_PULL_NONE , uart_unit);

	SYSCLK_INFO Clock;
	GetSysClockInfo(&Clock);

	uint32_t tmpreg = 0x30;//默认支支持8bit数据
	uart_obj->uartx->BRR = (Clock.PCLK2Clock/(baudrate << 4));  //设置波特率
	uart_obj->uartx->GCR = 0x0U;

	tmpreg |= stop;
	tmpreg |= parity;
	uart_obj->uartx->CCR |= tmpreg;

	tmpreg = 0x1B;//默认正常发送接收使能，使能模块
	tmpreg |= flow;
	uart_obj->uartx->GCR = tmpreg;

	uart_obj->uartx->ICR = 0xFFU;

	uart_obj->uartx->IER = 0x00U; //关闭所有中断
	uart_obj->uartx->CSR = 0x09U;

	NVIC_SetPriority(IRQn_NONNEG(irqn), IRQ_PRI_UART);
	NVIC_EnableIRQ(irqn);

	uart_obj->is_enabled = true;
	uart_obj->attached_to_repl = false;

	uart_obj->char_mask = 0x7f;
	uart_obj->char_width = CHAR_WIDTH_8BIT;

	uart_obj->mp_irq_trigger = 0;
	uart_obj->mp_irq_obj = NULL;


	uint32_t rx_reg = UARTx->RDR; //清除接收超时中断
	(void)rx_reg;
	uart_obj->uartx->ICR = 0x0U;  //清除所有中断标志

	uart_obj->uartx->CSR = 0x09;


int errcode;
uart_tx_data(uart_obj, "OK\r\n", 4, &errcode);

	return true;
}

void uart_deinit(pyb_uart_obj_t *self) {
    self->is_enabled = false;

    // Disable UART
		self->uartx->GCR &= ~GCR_UE_BIT;

    // Reset and turn off the UART peripheral
    if (self->uart_id == 1) {
        NVIC_DisableIRQ(UART1_IRQn);
				RCC_APB2PeriphClockCmd(RCC_APB2Periph_UART1,DISABLE);
    #if defined(USART2)
    } else if (self->uart_id == 2) {
				NVIC_DisableIRQ(UART2_IRQn);
    #endif
    #if defined(USART3)
    } else if (self->uart_id == 3) {
				NVIC_DisableIRQ(UART3_IRQn);
    #endif
    #if defined(UART4)
    } else if (self->uart_id == 4) {
				NVIC_DisableIRQ(UART4_IRQn);
    #endif
    #if defined(UART5)
    } else if (self->uart_id == 5) {
				NVIC_DisableIRQ(UART1_IRQn);
    #endif
    }
		RCC->APB2ENR &= ~((uint32_t)(1<<(self->uart_id + 1))); //关闭对应串口时钟
}

uint32_t uart_get_baudrate(pyb_uart_obj_t *self) {

	SYSCLK_INFO Clock;
	GetSysClockInfo(&Clock);

	return (Clock.PCLK2Clock/(self->uartx->BRR << 4));
}

size_t uart_tx_data(pyb_uart_obj_t *self, const void *src_in, size_t num_chars, int *errcode) {
    if (num_chars == 0) {
        *errcode = 0;
        return 0;
    }

    uint32_t timeout;
		#if 0
   if (self->uartx->CR3 & USART_CR3_CTSE) {  //使能流控
        // CTS can hold off transmission for an arbitrarily long time. Apply
        // the overall timeout rather than the character timeout.
      //  timeout = self->timeout;
    } else 
		#endif
		{
        // The timeout specified here is for waiting for the TX data register to
        // become empty (ie between chars), as well as for the final char to be
        // completely transferred.  The default value for timeout_char is long
        // enough for 1 char, but we need to double it to wait for the last char
        // to be transferred to the data register, and then to be transmitted.
        timeout = 2 * self->timeout_char;
    }

    const uint8_t *src = (const uint8_t *)src_in;
    size_t num_tx = 0;
    UART_TypeDef *uart = self->uartx;

    while (num_tx < num_chars) {
        if (!uart_wait_flag_set(self, UART_FLAG_TXE, timeout)) {
            *errcode = MP_ETIMEDOUT;
            return num_tx;
        }
        uint32_t data;
        if (self->char_width == CHAR_WIDTH_9BIT) {
            data = *((uint16_t *)src) & 0x1ff;
            src += 2;
        } else {
            data = *src++;
        }
        uart->TDR = data;
        ++num_tx;
    }

    // wait for the UART frame to complete
    if (!uart_wait_flag_set(self, UART_FLAG_TXE, timeout)) {
        *errcode = MP_ETIMEDOUT;
        return num_tx;
    }

    *errcode = 0;
    return num_tx;
}

void uart_irq_handler(mp_uint_t uart_id) {
    // get the uart object
    pyb_uart_obj_t *self = MP_STATE_PORT(pyb_uart_obj_all)[uart_id - 1];
		
    if (self == NULL) {
        // UART object has not been set, so we can't do anything, not
        // even disable the IRQ.  This should never happen.
        return;
    }
    if (UART_RXNE_IS_SET(self->uartx)) {
        if (self->read_buf_len != 0) {
            uint16_t next_head = (self->read_buf_head + 1) % self->read_buf_len;
            if (next_head != self->read_buf_tail) {
                int data = self->uartx->RDR; // clears UART_FLAG_RXNE
								self->uartx->ICR |= 1<<1; 
                data &= self->char_mask;
                if (self->attached_to_repl && data == mp_interrupt_char) {
                    // Handle interrupt coming in on a UART REPL
                    pendsv_kbd_intr();
                } else 
								{
                    if (self->char_width == CHAR_WIDTH_9BIT) {
                        ((uint16_t *)self->read_buf)[self->read_buf_head] = data;
                    } else {
                        self->read_buf[self->read_buf_head] = data;
                    }
                    self->read_buf_head = next_head;
                }
            } else { // No room: leave char in buf, disable interrupt
                UART_RXNE_IT_DIS(self->uartx);
            }
        }
    }
    // If RXNE is clear but ORE set then clear the ORE flag (it's tied to RXNE IRQ)
    else if (self->uartx->ISR & UART_FLAG_RXOERR) {  //判断超时错误，溢出错误
        //(void)self->uartx->RDR;
    }
    // Set user IRQ flags
    self->mp_irq_flags = 0;
    if (self->uartx->ISR & MP_UART_ALLOWED_FLAGS) {  //判断空闲中断
        self->mp_irq_flags |= MP_UART_ALLOWED_FLAGS;
    }
		
    // Check the flags to see if the user handler should be called
    if (self->mp_irq_trigger & self->mp_irq_flags) {
        mp_irq_handler(self->mp_irq_obj);
    }

		self->uartx->ICR |= 1<<1;  //清除接受中断
}
